localStorage used for dark mode And Match center completed

--- a/matchcenter.html
+++ b/matchcenter.html
@@ -9,11 +9,11 @@
     <script src="script/index.js" type="module" defer></script>
     <script src="script/matchcenter.js" type="module" defer></script>
     <link rel="stylesheet" href="style/style.css">
-    <link rel="stylesheet" href="style/home.css">
+    <link rel="stylesheet" href="style/match.css">
     <title>Match Center</title>
 </head>
 
-<body class="dark">
+<body>
     <nav class="flex j-evenly">
         <a href="#" class="btn hide menu flex inner"><i class="fa-solid fa-bars"></i></a>
         <div class="flex inner buttons">
