--- a/profile.html
+++ b/profile.html
@@ -13,7 +13,7 @@
     <title>Profile</title>
 </head>
 
-<body class="dark">
+<body>
     <nav class="flex j-evenly">
         <a href="#" class="btn hide menu flex inner"><i class="fa-solid fa-bars"></i></a>
         <div class="flex inner buttons">
