--- a/matches.html
+++ b/matches.html
@@ -12,7 +12,7 @@
     <title>Matches</title>
 </head>
 
-<body class="dark">
+<body>
     <nav class="flex j-evenly">
         <a href="#" class="btn hide menu flex inner"><i class="fa-solid fa-bars"></i></a>
         <div class="flex inner buttons">
