Number of matches won added to laederboard

--- a/leaderboard.html
+++ b/leaderboard.html
@@ -34,6 +34,9 @@
                 <span>Matches Voted</span>
             </div>
             <div class="flex inner section nowrap ">
+                <span>Matches Won</span>
+            </div>
+            <div class="flex inner section nowrap ">
                 <span>Points</span>
             </div>
         </div>
