New account page added signin/signup separated from profile

--- a/profile.html
+++ b/profile.html
@@ -26,7 +26,7 @@
             <button class="btn theme flex inner"><i class="fa-solid fa-moon"></i></button>
         </div>
     </nav>
-    <div class="flex container signin row"></div>
+    <div class="flex container row"></div>
     <div class="flex inner head col hide">
         <h2 class="header flex inner">Voted Matches</h2>
     </div>
