LoadMatches function conditons changed , and some styling changes

--- a/leaderboard.html
+++ b/leaderboard.html
@@ -31,10 +31,10 @@
                 <span>Name</span>
             </div>
             <div class="flex inner section nowrap ">
-                <span>Matches Voted</span>
+                <span>Voted</span>
             </div>
             <div class="flex inner section nowrap ">
-                <span>Matches Won</span>
+                <span>Won</span>
             </div>
             <div class="flex inner section nowrap ">
                 <span>Points</span>
